--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
@@ -1,90 +1,176 @@
-<div class="w-full overflow-x-auto">
-  <table class="table-auto">
-    <thead>
-      <tr>
-        <th rowspan="4" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Imunisasi</th>
-      </tr>
-      <tr>
-        <th colspan="21" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Usia</th>
-      </tr>
-      <tr>
-        <th colspan="12" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Bulan</th>
-        <th colspan="9" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Tahun</th>
-      </tr>
-      <tr>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">Lahir</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">1</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">2</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">4</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">15</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">24</th>
+<div class="mat-typography">
+  <div class="w-full overflow-x-auto">
+    <table class="table-auto">
+      <thead>
+        <tr>
+          <th
+            rowspan="4"
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Imunisasi
+          </th>
+        </tr>
+        <tr>
+          <th
+            colspan="21"
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Usia
+          </th>
+        </tr>
+        <tr>
+          <th
+            colspan="12"
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Bulan
+          </th>
+          <th
+            colspan="9"
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Tahun
+          </th>
+        </tr>
+        <tr>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">Lahir</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">1</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">2</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">4</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">15</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">24</th>
 
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">7</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">8</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">10</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
-        <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hepatitis B</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Polio</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">BCG</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">DTP</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hib</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">PCV</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Rotavirus</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Influenza</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Campak</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">MMR</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Tifoid</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hepatitis A</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Varisela</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">HPV</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Japanese encephalitis</td>
-      </tr>
-      <tr>
-        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Dengue</td>
-      </tr>
-    </tbody>
-  </table>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">7</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">8</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">10</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
+          <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Hepatitis B
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Polio
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            BCG
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            DTP
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Hib
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            PCV
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Rotavirus
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Influenza
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Campak
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            MMR
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Tifoid
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Hepatitis A
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Varisela
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            HPV
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Japanese encephalitis
+          </td>
+        </tr>
+        <tr>
+          <td
+            class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600"
+          >
+            Dengue
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
