--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/kesehatan-tab/kesehatan-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/kesehatan-tab/kesehatan-tab.component.html
@@ -3,148 +3,56 @@
     <tr>
       <th scope="col">Lingkar Leher</th>
       <th scope="col">
-        <button
-          mat-raised-button
-          color="accent"
-          (click)="oepnLingkarKepalaInput()"
-        >
-          Input
-        </button>
+        <button mat-raised-button color="accent">Input</button>
       </th>
       <th scope="col">
-        <button mat-raised-button color="primary" (click)="openLingkarKepala()">
-          Lihat
-        </button>
+        <button mat-raised-button color="primary">Lihat</button>
       </th>
     </tr>
     <tr>
       <th scope="col">Status Gizi (BB/TB)</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="oepnGiziBbTbInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="openStatusGiziBbTb()"
-        >
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Status Gizi (IMT/U)</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="oepnGiziItmUInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="openStatusGiziImtU()"
-        >
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Status Gizi (IP/TB)</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openGiziIpTbInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="openStatusGiziIpTb()"
-        >
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">KPSP</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openLingkarKepala()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openKpsp()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Daya Dengar</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openLingkarKepala()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openDayaDengar()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Daya Lihat</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openDayaLihatInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openDayaLihat()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Pemeriksaan GPPH</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openGpphInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openGpphShow()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Pemeriksaan KMPE</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openKmpeInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openKmpeShow()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
     <tr>
       <th scope="col">Pemeriksaan M-CHAT</th>
-      <th scope="col">
-        <button mat-raised-button color="accent" (click)="openMchatInput()">
-          Input
-        </button>
-      </th>
-      <th scope="col">
-        <button mat-raised-button color="primary" (click)="openMchatShow()">
-          Lihat
-        </button>
-      </th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
   </tbody>
 </table>
