--- a/Bintangku.WebUI/client/src/app/layout/layout.component.html
+++ b/Bintangku.WebUI/client/src/app/layout/layout.component.html
@@ -1,9 +1,20 @@
 <div class="site relative">
   <div class="absolute -right-7">
-    <svg width="436" height="271" viewBox="0 0 436 271" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path opacity="0.4"
+    <svg
+      width="436"
+      height="271"
+      viewBox="0 0 436 271"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        opacity="0.4"
         d="M35.1005 1C10.7458 30.0717 -15.0585 84.8493 13.6553 119.912C25.0998 133.887 38.3939 143.94 57.2315 141.561C76.9496 139.07 97.0704 123.333 104.798 104.814C110.987 89.9806 88.3482 93.6222 81.6068 97.5771C74.9808 101.464 73.8733 107.747 76.3078 113.049C79.9953 121.081 85.8022 131.135 95.5711 131.267C109.334 131.453 119.602 128.127 131.542 121.098C149.329 110.626 165.452 99.2527 185.092 92.2117C194.142 88.9676 204.021 85.117 213.645 83.9765C220.679 83.1428 226.38 86.5121 232.409 89.529C252.726 99.6953 250.101 129.225 252.67 148.736C259.193 198.286 284.51 254.506 337.329 267.273C358.129 272.302 381.825 270.309 401.353 261.846C411.144 257.602 419.316 252.072 426.601 244.252C433.682 236.65 438.085 231.174 443.994 222.167C453.999 206.915 458.611 191.37 466 175.063"
-        stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        stroke="#66CBFF"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
     </svg>
   </div>
   <app-header></app-header>
