--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-pemeriksaan/anak-pemeriksaan.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-pemeriksaan/anak-pemeriksaan.component.html
@@ -1,87 +1,95 @@
-<table
-  mat-table
-  [dataSource]="dataSource"
-  multiTemplateDataRows
-  class="mat-elevation-z8"
->
-  <ng-container matColumnDef="name">
-    <td mat-cell *matCellDef="let element">{{ element["name"] }}</td>
-  </ng-container>
-  <ng-container matColumnDef="position">
-    <td mat-cell *matCellDef="let element">
-      <button class="add" (click)="openModal(element.position)" mat-button>
-        TAMBAHKAN &nbsp;<mat-icon svgIcon="pencil-add"></mat-icon>
-      </button>
-      <button
-        (click)="expandedElement = expandedElement === element ? null : element;showTable(element.position)"
-        mat-button
-      >
-        {{ expandedElement === element ? "TUTUP" : "SELENGKAPNYA" }}
-        <mat-icon>{{
-          expandedElement === element ? "expand_less" : "expand_more"
-        }}</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td
-      mat-cell
-      *matCellDef="let element"
-      [attr.colspan]="columnsToDisplay.length"
-    >
-      <div
-        class="example-element-detail"
-        [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'"
-      >
-        <table
-          mat-table
-          *ngIf="element === expandedElement && !loading"
-          [dataSource]="detail[element.position].dataSource"
+<div class="w-full overflow-x-auto">
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    multiTemplateDataRows
+    class="mat-elevation-z8"
+  >
+    <ng-container matColumnDef="name">
+      <td mat-cell *matCellDef="let element">{{ element["name"] }}</td>
+    </ng-container>
+    <ng-container matColumnDef="position">
+      <td mat-cell *matCellDef="let element">
+        <button class="add" (click)="openModal(element.position)" mat-button>
+          TAMBAHKAN &nbsp;<mat-icon svgIcon="pencil-add"></mat-icon>
+        </button>
+        <button
+          (click)="
+            expandedElement = expandedElement === element ? null : element;
+            showTable(element.position)
+          "
+          mat-button
         >
-          <ng-container
-            matColumnDef="{{ column }}"
-            *ngFor="let column of detail[element.position].columnsToDisplay"
+          {{ expandedElement === element ? "TUTUP" : "SELENGKAPNYA" }}
+          <mat-icon>{{
+            expandedElement === element ? "expand_less" : "expand_more"
+          }}</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [attr.colspan]="columnsToDisplay.length"
+      >
+        <div
+          class="example-element-detail"
+          [@detailExpand]="
+            element === expandedElement ? 'expanded' : 'collapsed'
+          "
+        >
+          <table
+            style="width: 100%; table-layout: auto"
+            mat-table
+            *ngIf="element === expandedElement && !loading"
+            [dataSource]="detail[element.position]?.dataSource"
           >
-            <th
-              mat-header-cell
-              class="text-blue-700 font-bold"
-              *matHeaderCellDef
+            <ng-container
+              matColumnDef="{{ column }}"
+              *ngFor="let column of detail[element.position].columnsToDisplay"
+              style="width: fit-content"
             >
-              {{ detail[element.position].stringDisplay[column] }}
-            </th>
-            <td mat-cell *matCellDef="let element; let index = index">
-              {{ column === "no" ? index + 1 : element[column] }}
-            </td>
-          </ng-container>
-          <tr
-            mat-header-row
-            *matHeaderRowDef="detail[element.position].columnsToDisplay"
-          ></tr>
-          <tr
-            mat-row
-            class="no-border-last"
-            *matRowDef="
-              let row;
-              columns: detail[element.position].columnsToDisplay
-            "
-          ></tr>
-        </table>
-      </div>
-    </td>
-  </ng-container>
+              <th
+                mat-header-cell
+                class="text-blue-700 font-bold"
+                *matHeaderCellDef
+              >
+                {{ detail[element.position].stringDisplay[column] }}
+              </th>
+              <td mat-cell *matCellDef="let element; let index = index">
+                {{ column === "no" ? index + 1 : element[column] }}
+              </td>
+            </ng-container>
+            <tr
+              mat-header-row
+              *matHeaderRowDef="detail[element.position].columnsToDisplay"
+            ></tr>
+            <tr
+              mat-row
+              class="no-border-last"
+              *matRowDef="
+                let row;
+                columns: detail[element.position].columnsToDisplay
+              "
+            ></tr>
+          </table>
+        </div>
+      </td>
+    </ng-container>
 
-  <tr
-    mat-row
-    *matRowDef="let element; columns: columnsToDisplay"
-    class="example-element-row"
-    [class.example-expanded-row]="expandedElement === element"
-  ></tr>
-  <tr
-    mat-row
-    *matRowDef="let row; columns: ['expandedDetail']"
-    class="example-detail-row"
-  ></tr>
-</table>
-
+    <tr
+      mat-row
+      *matRowDef="let element; columns: columnsToDisplay"
+      class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element"
+    ></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: ['expandedDetail']"
+      class="example-detail-row"
+    ></tr>
+  </table>
+</div>
