--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/daya-lihat/daya-lihat.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/daya-lihat/daya-lihat.component.html
@@ -1,1 +1,71 @@
-<p>daya-lihat works!</p>
+<h2 mat-dialog-title>Petunjuk Tes Daya Lihat</h2>
+<mat-dialog-content class="mat-typography">
+  <!-- Tes Daya Lihat -->
+  <ul class="list-outside list-disc px-6"></ul>
+  <ol class="list-outside list-disc px-6">
+    <li>
+      Pilih suatu ruangan yang bersih dan tenang, dengan penyinaran yang baik
+    </li>
+    <li>Gantungkan poster “E” setinggi mata anak pada posisi duduk</li>
+    <li>
+      Letakkan sebuah kursi sejauh 3 meter dari poster “E” menghadap ke poster “
+      E”
+    </li>
+    <li>
+      Letakkan sebuah kursi lainnya di samping poster “E” untuk pemeriksa.
+    </li>
+    <li>
+      Pemeriksa memberikan kartu "E" pada anak.. Latih anak dalam mengarahkan
+      kartu "E" menghadap atas, bawah, kiri dan kanan; sesuai yang ditunjuk pada
+      poster “E” oleh pemeriksa. Beri pujian setiap kali anak mau melakukannya.
+      Lakukan hal ini sampai anak dapat mengarahkan kartu "E" dengan benar.
+    </li>
+    <li>
+      Selanjutnya, anak diminta menutup sebelah matanya dengan buku/kertas.
+    </li>
+    <li>
+      Selanjutnya, anak diminta menutup sebelah matanya dengan buku/kertas.
+    </li>
+    <li>
+      Dengan alat penunjuk, tunjuk huruf "E” pada poster, satu persatu, mulai
+      baris pertama sampai baris ke empat atau baris "E" terkecil yang masih
+      dapat di lihat.
+    </li>
+    <li>
+      Puji anak setiap kali dapat mencocokan posisi kartu "E" yang dipegangnya
+      dengan huruf "E" pada poster.
+    </li>
+    <li>
+      Ulangi pemeriksaan tersebut pada mata satunya dengan cara yang sama.
+    </li>
+  </ol>
+  <br />
+  <!-- End - Tes Daya Lihat -->
+
+  <div class="w-full my-4">
+    <form [formGroup]="formDayaLihat" (ngSubmit)="postDayaLihat(formDayaLihat)">
+      <div app-grid container="true" spacing="3">
+        <div app-grid item="true" xs="3">
+          <label class="mb-1">Mata Kana</label>
+          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
+            <input matInput type="number" formControlName="beratBadan" />
+          </div>
+        </div>
+        <div app-grid item="true" xs="3">
+          <label class="mb-1" for="">Mata Kiri</label>
+          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
+            <input matInput type="number" formControlName="tinggiBadan" />
+          </div>
+        </div>
+      </div>
+      <button
+        mat-raised-button
+        type="submit"
+        class="btn-submit mt-9"
+        color="primary"
+      >
+        Submit
+      </button>
+    </form>
+  </div>
+</mat-dialog-content>
