--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/lingkar-kepala/lingkar-kepala.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/lingkar-kepala/lingkar-kepala.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Petunjuk Lingkar Kepala</h2>
+<h2 mat-dialog-title>Petunjuk Pemeriksaan Lingkar Kepala</h2>
 <mat-dialog-content class="mat-typography">
   <!-- Petunjuk Lingkar Kepala -->
   <ul class="list-outside list-disc px-6">
@@ -20,36 +20,20 @@
   </ul>
   <!-- End - Petunjuk Lingkar Kepala -->
 
-  <!-- <div class="w-full my-4">
-    <form [formGroup]="formLingkarKepala" #form="ngForm">
-      <div app-grid container="true" spacing="3">
-        <div app-grid item="true" xs="6">
-          <label class="mb-1" for="">Lingkar Kepala</label>
-          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
-            <input matInput type="number" formControlName="lingkarKepala" />
-          </div>
-        </div>
-        <div app-grid item="true" xs="6">
-          <label class="mb-1" for="">Curva</label>
-          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
-            <input matInput type="number" formControlName="kurva" />
-          </div>
-        </div>
-      </div>
-    </form>
-  </div> -->
-
   <div class="w-full my-4">
-    <form [formGroup]="formLingkarKepala" (ngSubmit)="postLingkarKepala(formLingkarKepala)">
+    <form
+      [formGroup]="formLingkarKepala"
+      (ngSubmit)="postLingkarKepala(formLingkarKepala)"
+    >
       <div app-grid container="true" spacing="3">
         <div app-grid item="true" xs="6">
-          <label class="mb-1" for="">Lingkar Kepala</label>
+          <label class="mb-1">Lingkar Kepala</label>
           <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
             <input matInput type="number" formControlName="lingkarKepala" />
           </div>
         </div>
         <div app-grid item="true" xs="6">
-          <label class="mb-1" for="">Curva</label>
+          <label class="mb-1" for="">Kurva</label>
           <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
             <input matInput type="number" formControlName="kurva" />
           </div>
@@ -59,12 +43,10 @@
         mat-raised-button
         type="submit"
         class="btn-submit"
-        color="primary">
+        color="primary"
+      >
         Submit
       </button>
     </form>
   </div>
 </mat-dialog-content>
-<mat-dialog-actions>
-
-</mat-dialog-actions>
